--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"moment": "^2.29.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-icons": "^4.3.1",
 		"react-scripts": "4.0.3",
 		"typescript": "^4.4.3",
 		"uuid": "^8.3.2",
