--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"uuid": "^8.3.2",
 		"web-vitals": "^1.1.2"
 	},
+	"homepage": "https://emilnilsson12.github.io/react-todo-calendar/",
 	"scripts": {
 		"predeploy": "npm run build",
 		"deploy": "gh-pages -b prod -d build",
